# weekly-theme

./: .gitignore  README.md  pyproject.toml
weekly_theme/data/: themes.txt
weekly_theme/src/: config.py  draw_theme.py  generate_moodboard.py  theme_moodboard.py
weekly_theme/src/utils/: reset_themes.py
weekly_theme/src/weekly_theme/: config.py  draw_theme.py  generate_moodboard.py  reset_themes.py  theme_moodboard.py
